# timereport-slack-rust

./: Cargo.toml  README.md  test.sh
api/: Cargo.toml  README.md
api/src/: lib.rs
model/: Cargo.toml
model/src/: lib.rs
slack/: Cargo.toml  README.md
slack/src/: main.rs  model.rs  utils.rs  validate.rs
tests/slack/: unit_test.rs
