[package]
name = "model"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.5", features = ["json"] }
rocket = "0.4.5"