[package]
name = "slack"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
enum_str = "0.1.2"
failure = "0.1.8"
