[package]
name = "slack"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json"] }
rocket-slog = "0.4.0"
serde = { version = "1.0.115", features = ["derive"] }
failure = "0.1.8"
failure_derive = "0.1.8"
slog = "2.5.2"
sloggers = "1.0.1"
tokio = { version = "0.2.22", features = ["macros", "time"] }
